Add image based tests